# cantus

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  lib.rs  services.rs  state.rs
src-tauri/src/commands/: browse.rs  logs.rs  mod.rs  mods.rs  onboarding.rs  opener.rs  settings.rs
src-tauri/src/services/: game.rs  gamebanana.rs  installer.rs  jeode.rs  jeodewatcher.rs  log_watcher.rs  mod.rs  mods.rs  opener.rs  proton.rs  settings.rs  watcher.rs
src-tauri/src/state/: app.rs
src/lib/: log-parser.ts  utils.ts
src/lib/components/: BrowseCard.svelte  LogEntry.svelte  ModBadge.svelte  ModEntry.svelte  Sidebar.svelte  UpdateDialog.svelte
src/lib/components/browse/: BrowseCard.svelte  index.ts
src/lib/components/layout/: Sidebar.svelte
src/lib/components/logs/: LogEntry.svelte  index.ts
src/lib/components/mods/: ModBadge.svelte  ModEntry.svelte  index.ts
src/lib/components/onboarding/: GameDirectoryStep.svelte  GameStep.svelte  JeodeInstallStep.svelte  JeodeStep.svelte  Onboarding.svelte  ProtonStep.svelte  index.ts
src/lib/components/settings/: CantusCard.svelte  JeodeCard.svelte
src/lib/components/tabs/: BrowseTab.svelte  LogsTab.svelte  ModsTab.svelte  PlaceholderTab.svelte  SettingsTab.svelte  index.ts
src/lib/components/ui/: AlertDialog.svelte  Badge.svelte  Button.svelte  Input.svelte  Select.svelte  Switch.svelte  index.ts
src/lib/mock/: browse.ts  data.ts  logs.ts
src/lib/stores/: browse.svelte.ts  logs.svelte.ts  mods.svelte.ts  nav.svelte.ts  settings.svelte.ts  setup.svelte.ts  updater.svelte.ts
src/lib/types/: browse.ts  logs.ts  mod.ts  settings.ts  setup.ts
