[package]
name = "Cantus"
version = "0.1.2"
description = "Mod Manager for My Singing Monsters PC"
authors = ["Paficent"]
license = "MIT"
repository = "https://github.com/Paficent/cantus"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["fs"] }
sha2 = "0.10"
notify = "7"
zip = "2"
sevenz-rust = "0.6"
unrar = "0.5.8"
urlencoding = "2"
walkdir = "2.5.0"
thiserror = "1"
tauri-plugin-process = "2"
image = { version="0.25.6", features = ["avif", "jpeg", "png"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
